--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <footer style="background-color: grey; text-align: center;">
         <nav>
             <a href="https://oinima.github.io/home/">Home</a>
-            <a href="https://oinima.github.io/product/">Products</a>
+            <a href="https://oinima.github.io/products/">Products</a>
             <a href="https://oinima.github.io/about/">Shop Now</a>
             <a href="https://oinima.github.io/contact/">Contact Us</a>
             <a href="https://oinima.github.io/about/">Location</a>
